[package]
name = "oxidinetd"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "oi"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
smol = "1.3"
async-channel = "1.9"
futures-lite = "2.0"
ctrlc = "3.4"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
clap = { version = "4.5.43", features = ["derive"] }
